# hip

./: hip.cabal  stack.yaml
app/: Main.hs
bench/: Filter.hs
src/Graphics/: Image.hs
src/Graphics/Image/: IO.hs  Internal.hs  Processing.hs
src/Graphics/Image/Processing/: Binary.hs  Complex.hs  Convolution.hs  Filter.hs  Geometric.hs  Interpolation.hs
src/Graphics/Image/Processing/Complex/: Fourier.hs
tests/: Spec.hs
tests/Graphics/Image/: ProcessingSpec.hs
