Name:              hip
Version:           2.0.0.0
License:           BSD3
License-File:      LICENSE
Author:            Alexey Kuleshevich
Stability:         experimental
Maintainer:        alexey@kuleshevi.ch
Category:          Image Processing, Graphics
Synopsis:          Haskell Image Processing (HIP) Library.
Description:
            .
            Haskell Image Processing (HIP) Library provides an easy to use interface with a whole variaty of image manipulation capabilities.
            .
            Processing can be done sequentially as well as in parallel, with an custom fusion capabily. Computation is done by <https://hackage.haskell.org/package/massiv massiv>. It is highly extendable, with an ability to add various color spaces or provide implementations for underlying array like custom data structures.
            .
            It is capable of reading and writing a number of popular image formats by using <https://hackage.haskell.org/package/massiv-io massiv-io> package. Being a pure Haskell library it does not require any external programs, although it can display images using a program of your choice.
Homepage:          https://github.com/lehins/hip
Bug-Reports:       https://github.com/lehins/hip/issues
Cabal-Version:     >= 1.18
Build-Type:        Simple
Extra-Doc-Files:   images/*.jpg
                 , images/*.png
                 , images/*.gif
                 , images/downloaded/*.gif
                 , images/*.svg
                 , README.md
                   CHANGELOG.md
Library
  Default-Language: Haskell2010
  HS-Source-Dirs: src

  Build-Depends: base            >= 4.8 && < 5
               , massiv
               , massiv-io
  Other-Extensions: BangPatterns
                  , CPP
                  , FlexibleContexts
                  , FlexibleInstances
                  , MultiParamTypeClasses
                  , TypeFamilies
  Exposed-Modules: Graphics.Image.Internal
  --                , Graphics.Image.ColorSpace
  --                , Graphics.Image.IO
  --                , Graphics.Image.IO.Formats
  --                , Graphics.Image.IO.Histogram
  --                , Graphics.Image.Interface
  --                , Graphics.Image.Interface.Repa
  --                , Graphics.Image.Interface.Vector
  --                , Graphics.Image.Processing
  --                , Graphics.Image.Processing.Binary
  --                , Graphics.Image.Processing.Complex
  --                , Graphics.Image.Processing.Filter
  --                , Graphics.Image.Types
  -- Other-Modules:   Graphics.Image.ColorSpace.Binary
  --                , Graphics.Image.ColorSpace.CMYK
  --                , Graphics.Image.ColorSpace.Complex
  --                , Graphics.Image.ColorSpace.HSI
  --                , Graphics.Image.ColorSpace.RGB
  --                , Graphics.Image.ColorSpace.X
  --                , Graphics.Image.ColorSpace.Y
  --                , Graphics.Image.ColorSpace.YCbCr
  --                , Graphics.Image.IO.Base
  --                , Graphics.Image.IO.Formats.JuicyPixels
  --                , Graphics.Image.IO.Formats.Netpbm
  --                , Graphics.Image.Interface.Elevator
  --                , Graphics.Image.Interface.Repa.Generic
  --                , Graphics.Image.Interface.Repa.Storable
  --                , Graphics.Image.Interface.Repa.Unboxed
  --                , Graphics.Image.Interface.Vector.Generic
  --                , Graphics.Image.Interface.Vector.Storable
  --                , Graphics.Image.Interface.Vector.Unboxed
  --                , Graphics.Image.Interface.Vector.Unboxing
  --                , Graphics.Image.Processing.Convolution
  --                , Graphics.Image.Processing.Complex.Fourier
  --                , Graphics.Image.Processing.Geometric
  --                , Graphics.Image.Processing.Interpolation
  --                , Graphics.Image.Utils
  GHC-Options:     -Wall


Source-Repository head
  Type:     git
  Location: https://github.com/lehins/hip.git
